# NeuralNet

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  Math.h  NeuralNet.cpp  NeuralNet.h  NeuralNet.kdev4  NeuralNetwork.cpp  NeuralNetwork.h  Node.cpp  Node.cpp~  Node.h  Node.h~  README.md  main.cpp
.kdev4/: NeuralNet.kdev4
